--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
                 <artifactId>json</artifactId>
                 <version>20171018</version>
             </dependency>
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>auth0-spring-security-api</artifactId>
+                <version>1.1.0</version>
+            </dependency>
         </dependencies>
 
 
